update title and avatar

--- a/content/authors/authors/bryan-daniswara.yml
+++ b/content/authors/authors/bryan-daniswara.yml
@@ -1,7 +1,7 @@
 name: Bryan Daniswara
 bio: |
-  Front-end web developer. github/twitter @bryandaniswara
-avatar: ./avatars/bryan-daniswara.jpg
+  Fullstack Javascript developer. github/twitter @bryandaniswara
+avatar: ./avatars/bryan-daniswara-v2.jpg
 social:
   - url: https://twitter.com/bryandaniswara
   - url: https://instagram.com/bryan.daniswara
